# capitani

./: README  pyproject.toml
product_api/product_api/: settings.py
product_api/products/: kafka.py  models.py  views.py
product_api/products/migrations/: 0001_initial.py
